# commoncrawl

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
infrastructure/compute/: Dockerfile
make/: 00_setup_gcp.mk  01_setup_development.mk  02_setup_infra.mk
src/: utils.py
src/commoncrawl/: types.py  wat.py
src/prefect/: healtcheck.py  ingest_wat_files.py
src/spark/: submit_dataproc_job.py
tests/: test_types.py  test_wat.py
