[tool.poetry]
name = "commoncrawl"
version = "0.1.0"
description = ""
authors = ["Marc-Philipp Esser <m-esser@mail.de>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
python-dotenv = "^1.0.0"
pyarrow = "^12.0.1"
pandas = "^2.0.3"
warcio = "^1.7.4"
asyncio = "^3.4.3"
fastparquet = "^2023.7.0"
prefect-gcp = {extras = ["cloud-storage"], version = "^0.4.5"}
pyspark = "^3.4.1"
ipykernel = "^6.25.1"
google-cloud-dataproc = "^5.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
autoflake = "^2.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
